--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,27 @@
-version: '3.1'
-
+version: '2'
 services:
-
-  wordpress:
-    image: wordpress
-    restart: always
-    ports:
-      - 80:80
-    environment:
-      WORDPRESS_DB_HOST: 3306
-      WORDPRESS_DB_USER: root
-      WORDPRESS_DB_PASSWORD: root
-      WORDPRESS_DB_NAME: wordpress
-    volumes:
-      - wordpress:/var/www/html
-
   db:
     image: mysql:5.7
+    volumes:
+      - "./.data/db:/var/lib/mysql"
     restart: always
     environment:
+      MYSQL_ROOT_PASSWORD: wordpress
       MYSQL_DATABASE: wordpress
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_RANDOM_ROOT_PASSWORD: '1'
-    volumes:
-      - db:/var/lib/mysql
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
 
-volumes:
   wordpress:
-  db:
+    depends_on:
+      - db
+    image: wordpress:latest
+    links:
+      - db
+    ports:
+      - "80:80"
+    restart: always
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
